Fix issue "Elements must meet minimum color contrast ratio thresholds"
The ratio of the link color compared to the background was not enough. So i changed the color.

--- a/src/UI/Message.module.css
+++ b/src/UI/Message.module.css
@@ -52,7 +52,7 @@
 
 .message a {
 	background-color: transparent;
-	color: var(--parley-link-color, #4891F5);
+	color: var(--parley-link-color, #2E2EFF);
 	font-family: var(--parley-link-font, --parley-font, 'OpenSans', sans-serif);
 	font-size: var(--parley-link-font-size, 14px);
 	font-weight: var(--parley-link-font-weight, 400);
